--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <center>
-        <img src="./OGs/.jpg" width=150 height=150 border=5>
+        <img src="./OGs/J.jpg" width=150 height=150 border=5>
         <h1><span class="black"> THE OGs OF SECTION J </span>
     </center>
     </h1>
@@ -51,7 +51,7 @@
         <center>
             <h3><b>
                 <h1><u>MEMBERS OF THIS GROUP</u></h1>
-                <img src=./OGs/Arghya.jpg" border="1" width="150" height="150"> <br>
+                <img src="./OGs/Arghya.jpg" border="1" width="150" height="150"> <br>
                 Arghya Paitya<br>
                 (Founder)<br><br><br>
                 <img src="./OGs/Parijat.jpg" border="1" width="150" height="150"> <br>
