--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
         {
             font-style: italic;
         }
+	    *{
+            margin: 0;
+        }
     </style>
 
 </head>
@@ -54,7 +57,7 @@
         </div>
 <br><hr><br>
 <center><b><u><h1>AN ARTICLE BY THE FOUNDER - ARGHYA PAITYA</h1></u></b>
-    <pre><h3>
+    <pre><h2>
         Starting from the popular one Abhradip always busy on his phone and the one who has all the info of what's happening in the 
         college campus.
         Biprajit too is also popular among all and always love to savour his Kichoori in his red tiffin box loves to play cricket live
@@ -73,7 +76,7 @@
         are the ones you can have all the chill with hence girls you may contact them.
         And Last but not the least is me Arghya what to say about me I'm the one with whom you can talk about anything with whom you 
         can share anything without any hesitation and second thoughts So all are welcome to have a chat with me.
-    </h3>
+    </h2>
 </pre>
 </center>
         <hr color="Black">
