--- a/index.html
+++ b/index.html
@@ -32,11 +32,16 @@
 	    *{
             margin: 0;
         }
+	 .wrapper
+        {
+            width: 100%;
+        }
+        
     </style>
 
 </head>
 
-<body>
+<body><div class="wrapper">
     <div class="cyan">
         <b>
             <center>
@@ -167,7 +172,7 @@
             </h1>
         </centre>
     </div>
-
+	</div>
 </body>
 
 </html>
