--- a/index.html
+++ b/index.html
@@ -55,11 +55,11 @@
     <hr color="Black">
     <p>
 	           <div class="wrapper"><h3>
-            <center><b><u><h1>INTRODUCTION</h1></u></b><pre>
+            <center><b><u><h1>INTRODUCTION</h1></u></b>
         The OGs of Section J is a WhatsApp Group full of people of variety in views sticking with each other by a common thread of 
         Friendship which we acquired by investing our time with each other from our 1st year Online Days 15th December and Offline 
-        Days  from 18th April.</pre></h3></center>
-        </div>
+        Days  from 18th April.</h3></center>
+        
 <br><hr><br>
 <center><b><u><h1>AN ARTICLE BY THE FOUNDER - ARGHYA PAITYA</h1></u></b><br>
     <h2>
