--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
             <u>
                 <h2> <b>For getting notified with the latest notices of our college :-</b><br></h2>
             </u>
-            <iframe src="https://nita.ac.in/" Width="1200" height="400"></iframe>
+            <iframe src="https://nita.ac.in/" Width="1000" height="400"></iframe>
         </center>
     </div>
     </p>
@@ -166,7 +166,7 @@
                     <hr color=blue>
                     <br><br>
 			<center>
-				<img src="./OGs/Group.jpg">
+				<img src="./OGs/Group.jpg" width="1000">
 			</center>
                     <br><br><br><br><br><br><br><br><br>
                     </center>
