--- a/index.html
+++ b/index.html
@@ -36,6 +36,10 @@
         {
             background-color: white;
         }
+	   .LightGray
+        {
+            background-color: LightGray;
+        }
         
     </style>
 
@@ -59,8 +63,9 @@
         The OGs of Section J is a WhatsApp Group full of people of variety in views sticking with each other by a common thread of 
         Friendship which we acquired by investing our time with each other from our 1st year Online Days 15th December and Offline 
         Days  from 18th April.</h3></center>
-        
-<br><hr><br>
+	</div>
+<br><hr color="Black"><br>
+	</div class="LightGray">
 <center><b><u><h1>AN ARTICLE BY THE FOUNDER - ARGHYA PAITYA</h1></u></b><br>
     <h2>
         Starting from the popular one Abhradip always busy on his phone and the one who has all the info of what's happening in the 
@@ -144,7 +149,7 @@
     <hr color="Black">
     <br>
     <p>
-    <div class="cyan">
+    <div>
         <center>
             <u>
                 <h2> <b>For getting notified with the latest notices of our college :-</b><br></h2>
@@ -168,7 +173,7 @@
 			<center>
 				<img src="./OGs/Group.jpg" width="1000">
 			</center>
-                    <br><br><br><br><br><br><br><br><br>
+                    <br><br><br><br><br><br>
                     </center>
                 </b></u>
             </h1>
