--- a/index.html
+++ b/index.html
@@ -29,9 +29,6 @@
         {
             font-style: italic;
         }
-	    *{
-            margin: 0;
-        }
 	 .wrapper
         {
             background-color: white;
@@ -65,7 +62,7 @@
         Days  from 18th April.</h3></center>
 	</div>
 <br><hr color="Black"><br>
-	</div class="LightGray">
+	<div class="LightGray">
 <center><b><u><h1>AN ARTICLE BY THE FOUNDER - ARGHYA PAITYA</h1></u></b><br>
     <h2>
         Starting from the popular one Abhradip always busy on his phone and the one who has all the info of what's happening in the 
@@ -85,7 +82,7 @@
         your day(any type of content to precise) Sayan is a much cute one who is the one you can readily go and talk to both as said 
         are the ones you can have all the chill with hence girls you may contact them.<br>
         And Last but not the least is me Arghya what to say about me I'm the one with whom you can talk about anything with whom you 
-        can share anything without any hesitation and second thoughts So all are welcome to have a chat with me.<br>
+        can share anything without any hesitation and second thoughts So all are welcome to have a chat with me.<br><br><br>
 	
     </h2>
 
