--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
 	           <div class="wrapper"><h3>
             <center><b><u><h1>INTRODUCTION</h1></u></b>
         The OGs of Section J is a WhatsApp Group full of people of variety in views sticking with each other by a common thread of 
-        Friendship which we acquired by investing our time with each other from our 1st year Online Days 15th December and Offline 
-        Days  from 18th April.</h3></center>
+        friendship which we acquired by investing our time with each other from our 1st year online Days from 15th December and offline 
+        days from 18th April.</h3></center>
 	</div>
 <br><hr color="Black"><br>
 	<div class="LightGray">
